[gd_scene load_steps=2 format=3 uid="uid://cgfop7y1qc2hk"]

[ext_resource type="Script" uid="uid://cyhij5obbol8y" path="res://Scripts/CreateRepo.gd" id="1_2owac"]

[node name="CreateRepo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2owac")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Path" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="BrowseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Browse"

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/HBoxContainer"]

[node name="ProjectName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="CreateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create Repo"

[node name="Message" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="button_down" from="VBoxContainer/HBoxContainer/BrowseButton" to="." method="_on_browse_button_button_down"]
[connection signal="dir_selected" from="VBoxContainer/HBoxContainer/FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="button_down" from="VBoxContainer/CreateButton" to="." method="_on_create_button_button_down"]
